--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "allowJs": true
+  },
+  "exclude": ["node_modules", "dist"]
 }
