--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     volumes:
       - ./:/usr/src/app
       - /usr/src/app/node_modules
+    expose:
+      - '5000'
     ports:
       - '5000:5000'
       - '9229:9229'
@@ -40,6 +42,7 @@ services:
       - MYSQL_DB=jedzonko
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
+      - PORT=5000
     links:
       - db
     networks:
